[update]エディタのルート名前空間を設定

--- a/Assets/Scripts/SymphonyFrameWork/SymphonyEditor/Editor/SymphonyFrameWork-Editor.asmdef
+++ b/Assets/Scripts/SymphonyFrameWork/SymphonyEditor/Editor/SymphonyFrameWork-Editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "SymphonyFrameWork-Editor",
-    "rootNamespace": "",
+    "rootNamespace": "SymphonyFrameWork.Editor",
     "references": [
         "GUID:68a532f43eeefd5408e4e8871b769ee4",
         "GUID:b4e9782619c924d4fa0455d751d099be"
