[update]アセンブリデータを更新

--- a/Assets/SymphonyFrameWork/Enum/SymphonyFrameWork.Enum.asmdef
+++ b/Assets/SymphonyFrameWork/Enum/SymphonyFrameWork.Enum.asmdef
@@ -4,10 +4,12 @@
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "defineConstraints": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false,
     "platforms": []
 }
