[update]データも更新

--- a/Assets/SymphonyFrameWork/SymphonyEditor/Editor/SymphonyFrameWork.Editor.asmdef
+++ b/Assets/SymphonyFrameWork/SymphonyEditor/Editor/SymphonyFrameWork.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "SymphonyFrameWork-Editor",
+    "name": "SymphonyFrameWork.Editor",
     "rootNamespace": "SymphonyFrameWork.Editor",
     "references": [
         "GUID:68a532f43eeefd5408e4e8871b769ee4",
