--- a/Assets/SymphonyFrameWork/package.json
+++ b/Assets/SymphonyFrameWork/package.json
@@ -8,5 +8,8 @@
     "name": "HIBIKI_5201",
     "email": "takuto5201@gmail.com",
     "url": "https://pastoral-hovercraft-db7.notion.site/1544374a1f768079bac2f25b6a716cba?pvs=4"
+  },
+  "dependencies": {
+    "com.unity.nuget.newtonsoft-json": "3.2.1"
   }
 }
