--- a/Assets/SymphonyFrameWork/package.json
+++ b/Assets/SymphonyFrameWork/package.json
@@ -1,7 +1,7 @@
 {
   "name": "symphony.framework",
   "version": "1.20.5",
-  "displayName": "symphony framework",
+  "displayName": "Symphony Framework",
   "description": "This is Symphony Framework",
   "unity": "6000.0",
   "author": {
