--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,24 +1,25 @@
 {
   "dependencies": {
-    "com.unity.addressables": "2.3.16",
-    "com.unity.ai.navigation": "2.0.5",
+    "com.unity.addressables": "2.4.3",
+    "com.unity.ai.navigation": "2.0.7",
     "com.unity.animation.rigging": "1.3.0",
     "com.unity.behavior": "1.0.8",
     "com.unity.cinemachine": "3.1.3",
-    "com.unity.collab-proxy": "2.6.0",
+    "com.unity.collab-proxy": "2.7.1",
     "com.unity.formats.fbx": "5.1.3",
-    "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.11.2",
-    "com.unity.memoryprofiler": "1.1.5",
+    "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.inputsystem": "1.14.0",
+    "com.unity.memoryprofiler": "1.1.6",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.postprocessing": "3.4.0",
-    "com.unity.probuilder": "6.0.4",
-    "com.unity.render-pipelines.universal": "17.0.3",
-    "com.unity.test-framework": "1.4.5",
+    "com.unity.probuilder": "6.0.5",
+    "com.unity.project-auditor": "1.0.1",
+    "com.unity.render-pipelines.universal": "17.1.0",
+    "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualeffectgraph": "17.0.3",
-    "com.unity.visualscripting": "1.9.5",
+    "com.unity.visualeffectgraph": "17.1.0",
+    "com.unity.visualscripting": "1.9.6",
     "com.vrmc.gltf": "https://github.com/vrm-c/UniVRM.git?path=/Assets/UniGLTF#v0.128.0",
     "com.vrmc.univrm": "https://github.com/vrm-c/UniVRM.git?path=/Assets/VRM#v0.128.0",
     "com.vrmc.vrm": "https://github.com/vrm-c/UniVRM.git?path=/Assets/VRM10#v0.128.0",
